<resources>
    <string name="app_name">SimpliFarm</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="simplifarm">SimpliFarm</string>
</resources>
