<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="280dp">

        <EditText
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_user"
            android:hint="@string/email"
            android:background="@drawable/edittextstyle"/>

        <EditText
            android:layout_marginTop="10dp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_password"
            android:hint="@string/password"
            android:paddingTop="10dp"
            android:background="@drawable/edittextstyle"/>

        <TextView
            android:textColor="#fff"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/forgot_password"/>

        <Button
            android:textColor="#fff"
            android:background="@drawable/buttonstyleselector"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:text="@string/login" />
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
        <TextView
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"/>
        <TextView
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"/>
    </LinearLayout>
    </LinearLayout>


</RelativeLayout>